--- a/src/Components/shared/CardInServices/SmallCard.css
+++ b/src/Components/shared/CardInServices/SmallCard.css
@@ -28,3 +28,11 @@
   font-size: 16px;
   text-align: left;
 }
+
+@media (max-width: 768px) {
+  .cloudCard {
+    width: 100%;
+    margin: 5%;
+    height: 340px;
+  }
+}
